# data-parsing-llm

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test_script.py
esg_llm/: __init__.py  llm_utils.py  openai_utils.py  schema_processor.py  templates.py
notebooks/: Azure_LLM.ipynb  langsmith_tracing.ipynb  prompt_inout.ipynb  tesla.md
scripts/: Azure_LLM.ipynb  prompt_inout.ipynb
tests/data/: make_test_dataset.ipynb
tests/data/templates/: Mozart Apple Template 2021.xlsx  Mozart Honda Template 2023.xlsx  Mozart Sample Uber Template 2023.xlsx  Mozart Tesco Template 2023.xlsx  convert_csv.py  mozart-apple-template-2021.csv  mozart-honda-template-2023.csv  mozart-sample-uber-template-2023.csv  mozart-tesco-template-2023.csv
