[tool.poetry]
name = "esg-llm"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
