[tool.poetry]
name = "esg_llm"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "esg_llm" },
]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
python-dotenv = "*"
openai = "^1.3.4"
langchain = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
